--- a/alexa_shopping_list/config.yaml
+++ b/alexa_shopping_list/config.yaml
@@ -1,12 +1,12 @@
 name: Alexa Shopping List Sync
-version: "2409.259"
+version: "2409.259b"
 slug: alexa_shopping_list
 description: Alexa Shopping List synchronisation server
-url: "https://github.com/madmachinations/home-assistant-alexa-shopping-list"
+url: "https://github.com/mmstano/home-assistant-alexa-shopping-list"
 arch:
   - aarch64
   - amd64
-image: "madmachinations/ha-alexa-shopping-list-sync"
+image: "mmstano/ha-alexa-shopping-list-sync"
 startup: "services"
 ports:
   4000/tcp: 4000
